---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/nullptr/test_nullptr_comparison.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/nullptr/test_nullptr_comparison.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration x~3 `int` 42)
         (declaration p~4 `ptr<int>` (addressof (name x~3 `int`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal (name p~4 `ptr<int>`) nullptr)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (not-equal (name p~4 `ptr<int>`) nullptr)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal nullptr nullptr)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (not-equal nullptr nullptr)))
         (declaration null~5 `ptr<array<long; 10>>` nullptr)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (equal (name null~5 `ptr<array<long; 10>>`) nullptr)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (not-equal (name null~5 `ptr<array<long; 10>>`) nullptr)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d %d %d\n")
               (not-equal (name p~4 `ptr<int>`) 0)
               (equal 0ll (name p~4 `ptr<int>`))
               (not-equal (cast `ptr<void>` 0u) (name p~4 `ptr<int>`))
               (equal (name p~4 `ptr<int>`) (cast `ptr<void>` 0ul))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d %d %d\n")
               (not-equal (name null~5 `ptr<array<long; 10>>`) 0)
               (equal 0ll (name null~5 `ptr<array<long; 10>>`))
               (not-equal (cast `ptr<void>` 0) (name null~5 `ptr<array<long; 10>>`))
               (equal (name null~5 `ptr<array<long; 10>>`) (cast `ptr<void>` 0ul))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d %d %d\n")
               (equal 0l nullptr)
               (not-equal (negate 0l) nullptr)
               (not-equal nullptr (add 0xffff'ffff'ffff'ffff 1))
               (equal nullptr (subtract 1 1)))))))

----- stderr -----
